--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "darkaonline/l5-swagger": "^8.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^2.0",
-        "paragonie/random_compat": "2.*"
+        "nyholm/psr7": "^1.3",
+        "paragonie/random_compat": "2.*",
+        "symfony/psr-http-message-bridge": "~1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
