--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.0",
         "nyholm/psr7": "^1.3",
         "paragonie/random_compat": "2.*",
+        "spatie/laravel-permission": "^3.17",
         "symfony/psr-http-message-bridge": "~1.0"
     },
     "require-dev": {
