--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "nyholm/psr7": "^1.3",
         "paragonie/random_compat": "2.*",
         "spatie/laravel-permission": "^3.17",
-        "symfony/psr-http-message-bridge": "~1.0"
+        "symfony/psr-http-message-bridge": "~1.0",
+        "paysafegroup/paysafe_sdk_php": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
